Archive2/4d/1279c953029146/output
main.cpp: In function 'int main()':
main.cpp:18:25: error: cannot convert 'int (test::*)(char)' to 'func_ptr {aka int (*)(char)}' in initialization
     func_ptr f = &test::function;
                         ^
main.cpp:18:14: warning: unused variable 'f' [-Wunused-variable]
     func_ptr f = &test::function;
              ^
